--- a/package.json
+++ b/package.json
@@ -11,7 +11,21 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "axios": "^1.4.0",
+    "chart.js": "^3.9.1",
+    "dayjs": "^1.11.7",
+    "formik": "^2.2.9",
+    "jspdf": "^2.5.1",
+    "jwt-decode": "^3.1.2",
+    "react-hook-form": "^7.43.9",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
+    "redux-logger": "^3.0.6",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
