--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
     "chart.js": "^3.9.1",
     "dayjs": "^1.11.7",
+    "firebase": "^10.3.0",
     "formik": "^2.2.9",
     "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
